  the output buffer (to get debugging). [Boy]
* Removed dirty addDialogMRA functionality from atkNode and atkRecordList.
  since it is now also possible to override the submit-handling of the 
  javascript method atkMRASubmit(). [Dennis]
* Don't fetch meta data for atkDataNode. [Peter]
* Fixed javascript error in atkDateAttribute when using french language. [Ivo]

Changed in ATK 6.1
------------------
+ Added select method to atkNode which returns an instance of the
  atkSelector class which can be used to fluently build a selectDb
  expression to retrieve a single row, all rows or the row count.
  (PHP5 only!) [Peter]
+ Added support for custom templates in the admin actions. [Ruud]
+ Added generic Ajax DHTML dialog support to ATK (see atkDialog). [Peter]
+ Added support for add dialogs. If you set the NF_ADD_DIALOG on a node you
  will be presented with a DHTML popup dialog for entering a new record
  instead of a separate page. Can also be used for atkOneToManyRelations and
  replaces the AF_ONETOMANY_EMBED functionality. Works automatically if the
  NF_ADD_DIALOG flag is set on the destination node but can also be enabled
  using the AF_ONETOMANY_ADD_DIALOG flag. Please note that this functionality
  should only be used for simple nodes with only a few attributes and no tabs
  or sections. [Dennis, Patrick, Peter]
+ Added support for "add or copy" dialogs. This special type of dialog makes it
  possible for the user to select whatever he/she want to create a new
  record or copy an existing record. The user is presented with a dropdown of
  records to select from and can also select nested atkOneToManyRelations that
  need to be included in the copy process (or not). This functionality can
  be enabled by setting the NF_ADDORCOPY_DIALOG flag on the node or by
  specifying it using the AF_ONETOMANY_ADDORCOPY_DIALOG flag on an
  atkOneToManyRelation. [Dennis, Patrick, Peter, Tjeerd]
+ Added atkExtendableShuttleRelation; a shuttle relation which can be extended